--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-    "homepage": "https://<your-username>.github.io/<repo-name>",
+    "homepage": "https://<shoaib17101>.github.io/<portfolio2>",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
